<resources>
    <string name="app_name">Marvel Characters</string>

    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search ...</string>
    <string name="api_key">d69ae1426b19ec1650e79780e2fac09c</string>
    <string name="private_key">24e1aa65ba9828af4cd7415969bcff12d67cc696</string>
    <string name="marvel_url_base">http://gateway.marvel.com/v1/public/</string>
    <string name="series_title">Series</string>
    <string name="comic_title">Comics</string>
    <string name="description_title">Description</string>
    <string name="stories_title">Stories</string>
    <string name="events_title">Events</string>
    <string name="url_title">Related Links</string>
</resources>
