<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/detailImageHeight"
        android:scaleType="fitStart"
        android:id="@+id/detailImageView"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wade Wilson"
        android:id="@+id/detailTitle"
        style="@style/DetailMainTitleText"
        android:layout_marginTop="@dimen/detailTitleMargin"
        android:paddingLeft="@dimen/detailMainTitlePadding"
        android:paddingBottom="@dimen/detailMainTitlePadding"
        android:layout_alignBottom="@+id/detailImageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_title"
        android:id="@+id/detailDescriptionTitle"
        style="@style/DetailTitleText"
        android:layout_marginTop="@dimen/detailTitleMargin"
        android:layout_below="@+id/detailImageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New Text"
        style="@style/DetailContentText"
        android:id="@+id/detailContent"
        android:layout_below="@+id/detailDescriptionTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:id="@+id/comicTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comic_title"
        style="@style/DetailTitleText"
        android:layout_marginTop="@dimen/detailTitleMargin"
        android:layout_below="@+id/detailContent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <LinearLayout
        android:id="@+id/comicList"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comicTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </LinearLayout>
    <TextView
        android:id="@+id/seriesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/series_title"
        style="@style/DetailTitleText"
        android:layout_marginTop="@dimen/detailTitleMargin"
        android:layout_below="@+id/comicList"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <LinearLayout
        android:id="@+id/seriesList"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seriesTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </LinearLayout>
    <TextView
        android:id="@+id/storyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stories_title"
        style="@style/DetailTitleText"
        android:layout_marginTop="@dimen/detailTitleMargin"
        android:layout_below="@+id/seriesList"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <LinearLayout
        android:id="@+id/storyList"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/storyTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </LinearLayout>
    <TextView
        android:id="@+id/eventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events_title"
        style="@style/DetailTitleText"
        android:layout_marginTop="@dimen/detailTitleMargin"
        android:layout_below="@+id/storyList"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <LinearLayout
        android:id="@+id/eventList"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </LinearLayout>
    <TextView
        android:id="@+id/urlTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url_title"
        style="@style/DetailTitleText"
        android:layout_marginTop="@dimen/detailTitleMargin"
        android:layout_below="@+id/eventList"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <LinearLayout
        android:id="@+id/urlList"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/urlTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </LinearLayout>

</RelativeLayout>
</ScrollView>